methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:3: error: not found: value versLavant
  if (versLavant) {
      ^